[tool.poetry]
name = "rgg_save_tool"
version = "0.1.0"
description = "A tool for encrypting and decrypting RGG Studios game saves. (DE Only)"
authors = ["plyrthn <github@amusement.vision>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "rgg_save_tool" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.15"
msgpack = "^1.1.0"
chardet = "^5.2.0"
msgpack-python = "^0.5.6"

[tool.poetry.group.dev.dependencies]
poetry-dynamic-versioning = "^1.7.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = "^(?P<base>\\d+\\.\\d+\\.\\d+)"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
rgg-save-tool = "rgg_save_tool.rgg_save_tool:main"